2017-05-14  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_ssh.c: WSASocket() is called with WSA_FLAG_OVERLAPPED in _socketpair().

2017-05-08  Araki Ken  <arakiken@users.sf.net>

	* ui_screen_manager.c, MLTermPty.c, vte.c:
	  Calling vt_create_term() and ui_screen_new() is fixed.

	* ui_screen.[ch]:
	  - blink_cursor is removed.
	  - Underline cursor and bar cursor are supported.

	* vt_term.[ch]: vt_term_is_visible_cursor() and vt_term_get_cursor_style() are added.

	* vt_parser.[ch]:
	  - vt_cursor_style_t is added and DECSCUSR(3,4,5,6) is supported.
	  - is_visible_cursor is moved from vt_screen.
	  - vt_parser_is_visible_cursor() and vt_parser_get_cursor_style() are added.
	  - Processing "blink_cursor" of OSC 5379-5383 is moved from ui_screen.c

2017-05-07  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: The response to DECRQDE is fixed.

	* uitoolkit/Makefile.in: Error in compiling winrs.rs is fixed.

2017-05-07  Araki Ken  <arakiken@users.sf.net>

	* keymap.c: XK_Kakji, XK_Muhenkan, XK_Henkan, XK_Hiragana, XK_Katakana and
	  XK_Zenkaku_Hankaku are processed.

	* im_iimf.c: create_handle() searches unix domain socket files in /tmp/.iiim-$USER/.

	* vt_parser.c:
	  - DECRQDE (CSI " v), NP(CSI U), PP(CSI V), PPA(CSI SP P), PPR(CSI SP Q) and
	    PPB(CSI SP R) are processed.
	  - DECCRA and DECLRP supports page.

	* ui_picture.c: cleanup_inline_pictures() checks term->screen->page_edits.

	* vt_screen.[ch]:
	  - 'page_edits' is added to vt_screen_t.
	  - vt_screen_is_alternative_edit() is changed from function to macro.
	  - src_page and dst_page arguments are added to vt_screen_copy_area().
	  - vt_screen_get_page_id(), vt_screen_goto_page(), vt_screen_goto_next_page()
	    and vt_screen_goto_prev_page() are added.

2017-05-05  Araki Ken  <arakiken@users.sf.net>

	* console/ui_font.c, ui_screen.c: line_space and letter_space options are ignored.

	* console/ui_window.c, fb/ui_window.c: ui_window_is_scrollable() returns 0